Add routes and descriptions for Swagger
